layout bug fixes

--- a/src/app/features/presentation-view/components/presentation-view/presentation-view.component.scss
+++ b/src/app/features/presentation-view/components/presentation-view/presentation-view.component.scss
@@ -17,16 +17,11 @@
 
 .line,
 .bible-verse {
-    font-size: 2.5rem;
     text-align: center;
     margin-bottom: 60px;
-    line-height: 175%;
-}
-
-.line {
-    line-height: 100%;
 }
 
 .bible-verse {
     margin-bottom: 0 !important;
+    padding: 0 10px 0 10px;
 }
